# labs-skills

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SKILL.md  SKILL_INDEX.md
01-language-frameworks/python/fastapi-basics/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
01-language-frameworks/python/langchain-langgraph/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
01-language-frameworks/python/pydantic-v2/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
01-language-frameworks/python/uv-package-manager/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
02-architecture-design/dual-mode-streaming/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
02-architecture-design/dual-mode-streaming/docs/: concepts.md  patterns.md
02-architecture-design/dual-mode-streaming/exercises/: exercise_1_dual_mode.py  exercise_2_progress_reporter.py  exercise_3_llm_simulator.py
02-architecture-design/dual-mode-streaming/tests/: __init__.py  test_examples.py  test_modes.py  test_streaming.py
02-architecture-design/episode-based-history/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
02-architecture-design/episode-based-history/docs/: concepts.md  patterns.md
02-architecture-design/episode-based-history/exercises/: exercise_1_episode_manager.py
02-architecture-design/episode-based-history/tests/: __init__.py  test_episode.py  test_manager.py
02-architecture-design/factory-pattern/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
02-architecture-design/factory-pattern/docs/: concepts.md  patterns.md
02-architecture-design/four-layer-prompts/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
02-architecture-design/four-layer-prompts/docs/: concepts.md  patterns.md
02-architecture-design/four-layer-prompts/exercises/: exercise_1_code_review.py  exercise_2_dynamic_context.py  exercise_3_multi_template.py
02-architecture-design/four-layer-prompts/tests/: __init__.py  test_composer.py  test_layers.py  test_templates.py
03-testing/python/aws-mocking-moto/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
03-testing/python/pytest-asyncio/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
03-testing/python/pytest-markers/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
04-devops-deployment/fsd-iam-policies/: Makefile  README.md  SKILL.md  pyproject.toml
04-devops-deployment/fsd-iam-policies/docs/: concepts.md  patterns.md
04-devops-deployment/fsd-iam-policies/exercises/: exercise_1.py  exercise_2.py  exercise_3.py
04-devops-deployment/fsd-iam-policies/tests/: __init__.py  test_examples.py
05-data-databases/dynamodb-streams-cdc/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
05-data-databases/dynamodb-streams-cdc/docs/: concepts.md  patterns.md
05-data-databases/dynamodb-streams-cdc/exercises/: exercise_1.py  exercise_2.py  exercise_3.py
05-data-databases/dynamodb-streams-cdc/tests/: test_examples.py
05-data-databases/kafka-event-streaming/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
05-data-databases/kafka-event-streaming/docs/: concepts.md  patterns.md
05-data-databases/kafka-event-streaming/exercises/: exercise_1.py  exercise_2.py  exercise_3.py
05-data-databases/kafka-event-streaming/tests/: __init__.py  test_examples.py
05-data-databases/neo4j-cypher/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
05-data-databases/neo4j-cypher/docs/: concepts.md  patterns.md
05-data-databases/neo4j-cypher/examples/: __init__.py  example_1_crud.py  example_2_patterns.py  example_3_aggregations.py
05-data-databases/neo4j-cypher/exercises/: __init__.py  exercise_1_social.py  exercise_2_movies.py  exercise_3_recommend.py
05-data-databases/neo4j-cypher/tests/: __init__.py  test_cypher.py
05-data-databases/neo4j-date-datetime/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
05-data-databases/neo4j-date-datetime/docs/: concepts.md  patterns.md
05-data-databases/neo4j-date-datetime/examples/: __init__.py  example_1_date.py  example_2_datetime.py  example_3_duration.py
05-data-databases/neo4j-date-datetime/exercises/: __init__.py  exercise_1_calendar.py
05-data-databases/neo4j-date-datetime/tests/: __init__.py  test_temporal.py
05-data-databases/valkey-redis/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
05-data-databases/valkey-redis/docs/: concepts.md  patterns.md
05-data-databases/valkey-redis/exercises/: exercise_1.py  exercise_2.py  exercise_3.py
05-data-databases/valkey-redis/tests/: __init__.py  test_examples.py
06-ai-ml/hybrid-search/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
06-ai-ml/hybrid-search/docs/: concepts.md  patterns.md
06-ai-ml/hybrid-search/exercises/: exercise_1.py  exercise_2.py  exercise_3.py
06-ai-ml/hybrid-search/tests/: test_examples.py
06-ai-ml/openai-responses-api/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
06-ai-ml/openai-responses-api/docs/: concepts.md  patterns.md
06-ai-ml/openai-responses-api/exercises/: exercise_1_chatbot.py  exercise_2_tool_agent.py  exercise_3_data_extractor.py
06-ai-ml/openai-responses-api/tests/: __init__.py  conftest.py  test_examples.py
06-ai-ml/sse-streaming/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
06-ai-ml/sse-streaming/docs/: concepts.md  patterns.md
06-ai-ml/sse-streaming/exercises/: exercise_1_chat_endpoint.py  exercise_2_progress_streaming.py  exercise_3_multi_source.py
06-ai-ml/sse-streaming/tests/: __init__.py  conftest.py  test_examples.py
07-security/jwt-validation/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
07-security/jwt-validation/docs/: concepts.md  (+1 more)
07-security/oauth-21-oidc/: Makefile  README.md  SKILL.md  pyproject.toml
07-security/secrets-manager/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
08-documentation/claude-md-standards/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
08-documentation/component-documentation/: CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
(+1260 files in other folders)
