[project]
name = "pytest_markers"
version = "0.1.0"
description = "Labs Skills: pytest Markers for Test Organization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_markers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast running",
    "integration: marks tests as integration tests requiring external services",
    "unit: marks tests as unit tests",
    "database: marks tests requiring database connection",
    "api: marks tests requiring API access",
    "smoke: marks tests for smoke testing",
    "regression: marks tests for regression testing",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
