[project]
name = "mypy_type_checking"
version = "0.1.0"
description = "Labs Skills: MyPy Type Checking - Learn static type checking for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypy_type_checking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

# ============================================
# MyPy Configuration - This is the main focus!
# ============================================

[tool.mypy]
# Python version to target
python_version = "3.11"

# Strict mode - enables all optional error checking flags
strict = true

# Additional strict settings (already included in strict)
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Check untyped function bodies
check_untyped_defs = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None and Optional handling
strict_optional = true
no_implicit_optional = true

# Import handling
ignore_missing_imports = false

# Error reporting
show_error_codes = true
show_column_numbers = true
pretty = true

# Performance
cache_fine_grained = true

# Per-module overrides for exercises (allow untyped code for learning)
[[tool.mypy.overrides]]
module = ["mypy_type_checking.exercises.*"]
ignore_errors = true
