[project]
name = "ruff_linting"
version = "0.1.0"
description = "Labs Skills: Ruff Linting - Learn fast Python linting and formatting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruff_linting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ============================================
# Ruff Configuration - This is the main focus!
# ============================================

[tool.ruff]
# General settings
line-length = 100
target-version = "py311"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Rule selection - start with common rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes (logic errors)
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (Python version upgrades)
    "B",     # flake8-bugbear (bug detection)
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "PTH",   # flake8-use-pathlib
]

# Rules to ignore
ignore = [
    "E501",  # Line too long - handled by formatter
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow assert in tests
"tests/*" = ["S101", "B011"]
# Allow unused imports in __init__.py (re-exports)
"__init__.py" = ["F401"]
# Example files may have intentional issues
"examples/*" = ["F841", "B018"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["ruff_linting"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Formatting options (Black-compatible)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# MyPy Configuration (complementary tool)
# ============================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
